# fimate

./: README.md  pyproject.toml  requirements.txt
notebook/: forcast.ipynb  forcast_with_supervised_ML.ipynb  main.ipynb
src/: app.py
src/backtester/: base.py  sma.py
