[tool.poetry]
name = "fimate"
version = "0.1.0"
description = "A platform for trading and all things finance"
authors = ["d1pankarmedhi <dipankarmedhi11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.34.0"
yfinance = "^0.2.38"
scipy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
